# k8socks

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/k8socks-cli/: Cargo.toml
crates/k8socks-cli/src/: main.rs
crates/k8socks-config/: Cargo.toml
crates/k8socks-config/src/: lib.rs
crates/k8socks-k8s/: Cargo.toml
crates/k8socks-k8s/src/: lib.rs
crates/k8socks-logging/: Cargo.toml
crates/k8socks-logging/src/: lib.rs
crates/k8socks-ssh/: Cargo.toml
crates/k8socks-ssh/src/: lib.rs
crates/k8socks-traits/: Cargo.toml
crates/k8socks-traits/src/: lib.rs
crates/k8socks-traits/src/config/: mod.rs
crates/k8socks-traits/src/k8s/: mod.rs
crates/k8socks-traits/src/logging/: mod.rs
crates/k8socks-traits/src/ssh/: mod.rs
k8socks/: .gitignore
k8socks/crates/k8socks-config/: Cargo.toml
k8socks/crates/k8socks-config/src/: lib.rs
k8socks/crates/k8socks-k8s/: Cargo.toml
k8socks/crates/k8socks-k8s/src/: lib.rs
k8socks/crates/k8socks-ssh/src/: lib.rs
