[package]
name = "k8socks-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
k8socks-config = { path = "../k8socks-config" }
k8socks-k8s = { path = "../k8socks-k8s" }
k8socks-ssh = { path = "../k8socks-ssh" }
k8socks-logging = { path = "../k8socks-logging" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.48", features = ["derive", "env"] }
tracing = "0.1.41"
merge = "0.2.0"
