[package]
name = "k8socks-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
k8socks-traits = { path = "../k8socks-traits" }
k8socks-config = { path = "../k8socks-config" }
k8socks-k8s = { path = "../k8socks-k8s" }
k8socks-ssh = { path = "../k8socks-ssh" }
k8socks-logging = { path = "../k8socks-logging" }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
tracing = "0.1.41"
merge = "0.2.0"